2011-11-15  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/include/yarp/os/Bytes.h
	* src/libYARP_OS/include/yarp/os/ManagedBytes.h
	* src/libYARP_OS/include/yarp/os/ConnectionReader.h
	* src/libYARP_OS/include/yarp/os/ConnectionWriter.h:
	switch from int to size_t where appropriate.

2011-11-07  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/Contact.cpp: fix rusty support for YARP 
	without nameserver [thanks Traveler Hauptman]

2011-11-03  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* example/swig/yarp.i: add IGazeControl view 
	[thanks Sebastian Gieselmann]

2011-11-03 Lorenzo Natale <lorenzo.natale@iit.it>
    * conf/FindGTKMMWin32.cmake
	* conf/FindGtkWin32.cmake
	* conf/FindGthread.cmake
	added support for gtkmm x64 (default windows installer set GTKMM64_BASEPATH)

	* conf/FindGTKMMWin32.cmake
	specifically handles Visual Studio 10, previous version was using VS9 dlls with 
	VS10 and caused mysterious crash of gyarpmanager. May need VS 10 users to install 
	newer versions of gtkmm that contains VS 10 dlls (i.e. 2.22).


2011-11-02  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/modules/CMakeLists.txt: avoid path conflicts when compiling
	multiple external modules [thanks Rui Silva] [bug tracker #3432174]

2011-10-31  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/include/yarp/os/impl/Logger.h: remove DEBUG
	from enum, since it may be defined as a macro on some version
	of MSVC [thanks Rui Silva] [bug tracker #3431122]

2011-10-24  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* conf/template/YARPConfig.cmake.in: use CMAKE_CURRENT_LIST_FILE
	instead of hard-coded path [thanks Traveler Hauptman]
	[thanks Lorenzo Natale]

2011-10-28 Alessandro Scalzo <alessandro.scalzo@iit.it>

        * src/libYARP_dev/include/yarp/dev/FrameGrabberInterfaces.h
        * src/libYARP_dev/include/yarp/dev/ServerFrameGrabber.h
	* src/libYARP_dev/src/ServerFrameGrabber.cpp
	Added support to dragonfly2raw raw image framegrabber driver.
